# claude-manager-service

./: .automation-scope.yaml  .bandit  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierrc  .pylintrc  .releaserc.json  =4.0.0  =6.0.0  ARCHITECTURE.md  AUTONOMOUS_BACKLOG_GUIDE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_FINAL_REPORT.md  AUTONOMOUS_SDLC_v4_COMPLETE_FINAL_REPORT.md  AUTONOMOUS_SDLC_v4_COMPLETE_IMPLEMENTATION.md  AUTONOMOUS_SDLC_v4_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTINUOUS_EXECUTION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.production  ENVIRONMENT_VARIABLES.md  FINAL_AUTONOMOUS_SDLC_EXECUTION_REPORT.md  GENERATION_2_EXECUTION_REPORT.md  GENERATION_2_IMPLEMENTATION_COMPLETE.md  GENERATION_2_README.md  GENERATION_3_EXECUTION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  (+95 more)
.claude_manager/: task_tracker.json
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: 1-scan-and-propose.yml  2-execute-approved-task.yml  auto-rebase.yml  dependency-management.yml  performance.yml  security.yml
.terragon/: AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  SYSTEM_STATUS.md  VALUE_DRIVEN_BACKLOG.md  value-config.yaml  value-metrics.json  value_discovery_engine.py
chaos-engineering/: chaos-config.yaml  chaos-monkey-framework.py
config/: production.json
docs/: API.md  CAPACITY_PLANNING.md  COMPLIANCE.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  OPERATIONAL_RUNBOOKS.md  ROADMAP.md  SETUP_REQUIRED.md  WORKFLOW_SETUP_COMPLETE.md
docs/adr/: 000-template.md  ADR-001-architecture-decision-records.md  ADR-002-python-async-architecture.md
docs/advanced-ci-cd/: INTELLIGENT_PIPELINE_STRATEGY.md
docs/architecture/: SLSA_COMPLIANCE.md
docs/deployment/: ADVANCED_DEPLOYMENT_STRATEGIES.md  BUILD_AND_DEPLOYMENT_GUIDE.md
docs/github-workflows-templates/: README.md  ci-cd.yml  ci.yml  release.yml
docs/guides/: developer-guide.md  development-workflow.md  user-guide.md
docs/operations/: DISASTER_RECOVERY.md
docs/runbooks/: application-down.md  disaster-recovery.md  monitoring-runbook.md
docs/status/: autonomous_backlog_status_2025-07-24.md  autonomous_execution_2025-07-27.md  autonomous_execution_2025-07-27_final.md  autonomous_execution_final_2025-07-24.md  autonomous_execution_final_2025-07-26.md  autonomous_test_fixes_2025-07-24.md  discovered_backlog_2025-07-26.json  discovered_backlog_repo.json
docs/testing/: README.md
docs/workflows/: DEPLOYMENT_GUIDE.md  README.md  RECOMMENDED_GITHUB_ACTIONS.md
i18n/de/: errors.json  messages.json  ui.json
i18n/en/: messages.json
i18n/es/: errors.json  messages.json  ui.json
i18n/fr/: errors.json  messages.json  ui.json
i18n/ja/: errors.json  messages.json  ui.json
i18n/ko/: ui.json
i18n/zh-CN/: errors.json  messages.json  ui.json
i18n/zh-TW/: errors.json
intelligent-release-automation/: release-config.yaml  release-orchestrator.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  production-deployment.yaml
monitoring/: alertmanager.yml  prometheus-prod.yml  prometheus.yml
monitoring/grafana-dashboards/: application-overview.json
monitoring/rules/: alerts.yml
observability/: distributed-tracing-setup.py  opentelemetry-config.yaml
performance_data/: test_metrics.json
policy-as-code/: gatekeeper-constraints.yaml  opa-policies.rego
prompts/: feature_implementation.j2  fix_issue.j2  fix_issue.txt  refactor_code.j2  refactor_code.txt
scripts/: build.sh  collect-metrics.py  deploy.sh  generate-sbom.py  one_off_task.sh  resource-monitor.py  security-scan.sh  setup-automation.py  setup-git-hooks.sh  setup-workflows.sh  validate-build.py  validate-monitoring.py  validate-sdlc-integration.py  validate-testing-setup.py  validate-workflows.py
scripts/security/: container-scan.sh
src/: __init__.py  advanced_monitoring.py  advanced_orchestrator.py  advanced_performance_engine.py  advanced_performance_optimization.py  advanced_scaling.py  advanced_validation.py  async_file_operations.py  async_github_api.py  async_orchestrator.py  async_task_analyzer.py  auto_scaler.py  autonomous_enhancement_engine.py  autonomous_execution_engine.py  autonomous_quality_gates.py  autonomous_sdlc_v5.py  autonomous_status_reporter.py  cache_manager.py  comprehensive_monitoring.py  comprehensive_monitoring_system.py  comprehensive_monitoring_v2.py  comprehensive_quality_system.py  concurrent_repository_scanner.py  config_env.py  config_validator.py  config_validator_v2.py  connection_pool.py  continuous_backlog_executor.py  core_system.py  database_migration_utility.py  database_performance_monitor.py  database_task_tracker.py  distributed_tracing.py  dora_metrics.py  enhanced_error_handler.py  enhanced_error_handling.py  enhanced_logger.py  enhanced_resilience_v2.py  enhanced_security.py  enhanced_security_framework.py  (+57 more)
src/services/: __init__.py  configuration_service.py  database_service.py  issue_service.py  repository_service.py  task_service.py
templates/github-workflows/: auto-rebase.yml
tests/: conftest.py
tests/contract/: __init__.py  test_api_contracts.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: __init__.py  (+2 more)
web/: README.md  app.py
(+38 files in other folders)
